--- a/index.html
+++ b/index.html
@@ -71,8 +71,12 @@
 					<div class="roles__content">
 						<div class="card">
 							<div class="role">
-								<div class="role__img"></div>
-								<div class="role__title">Дюймовочка</div>
+								<div class="role__top">
+									<div class="role__img">
+										<img src="./images/cat1.jpg" alt="Дюймовочка" />
+									</div>
+									<div class="role__title">Дюймовочка</div>
+								</div>
 								<div class="role__info">
 									Крохотная девочка, героиня одноимённой сказки датского поэта,
 									путешественника и сказочника Х. К. Андерсена.
@@ -81,8 +85,12 @@
 						</div>
 						<div class="card">
 							<div class="role">
-								<div class="role__img"></div>
-								<div class="role__title">Щелкунчик</div>
+								<div class="role__top">
+									<div class="role__img">
+										<img src="./images/cat3.jpg" alt="Щелкунчик" />
+									</div>
+									<div class="role__title">Щелкунчик</div>
+								</div>
 								<div class="role__info">
 									Деревянная механическая кукла-карикатура, давно уже ставшая
 									символом Нового года и Рождества. Щелкунчик выглядит очень
@@ -94,8 +102,12 @@
 						</div>
 						<div class="card">
 							<div class="role">
-								<div class="role__img"></div>
-								<div class="role__title">Серунчик</div>
+								<div class="role__top">
+									<div class="role__img">
+										<img src="./images/cat6.jpg" alt="Серунчик" />
+									</div>
+									<div class="role__title">Серунчик</div>
+								</div>
 								<div class="role__info">
 									Это так называемый “caganer” — в переводе «какающий пастух»
 									или «серун». Это самый забавный и необычный рождественский
@@ -105,8 +117,12 @@
 						</div>
 						<div class="card">
 							<div class="role">
-								<div class="role__img"></div>
-								<div class="role__title">Чебурашка</div>
+								<div class="role__top">
+									<div class="role__img">
+										<img src="./images/cat7.jpg" alt="Чебурашка" />
+									</div>
+									<div class="role__title">Чебурашка</div>
+								</div>
 								<div class="role__info">
 									Вымышленный зверёк с огромными ушами, большими глазами и
 									коричневой шерстью, ходящий на задних лапах.
@@ -122,8 +138,8 @@
 				<div class="contacts__inner">
 					<div class="contacts__title">Контакты:</div>
 					<div class="contacts__info">
-						<p>Разработка web-приложений</p>
-						<p>любой сложности под ключ</p>
+						<div>Разработка web-приложений</div>
+						<div>любой сложности под ключ</div>
 					</div>
 					<div class="contacts__box">
 						<a href="#" class="contacts__link"></a
@@ -140,9 +156,12 @@
 		<footer class="footer">
 			<div class="container">
 				<div class="footer__inner">
-					<div class="footer__copyrights">© ООО "Миросфера"</div>
+					<div class="footer__copyrights">
+						©&nbsp;2023&nbsp;ООО&nbsp;"Миросфера"
+					</div>
 					<div class="footer__text">
-						Создано при поддержке открытого сообщества разработчиков © Altiore
+						Создано при поддержке открытого сообщества разработчиков
+						©&nbsp;Altiore
 					</div>
 					<div class="footer__text">От людей поколениям</div>
 					<div class="footer__link">
