--- a/index.html
+++ b/index.html
@@ -5,6 +5,24 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Миросфера - партнеры</title>
+		<link rel="icon" href="/favicon.ico" />
+		<link
+			rel="icon"
+			type="image/png"
+			sizes="16x16"
+			href="./images/favicon-16x16.png"
+		/>
+		<link
+			rel="icon"
+			type="image/png"
+			sizes="32x32"
+			href="./images/favicon-32x32.png"
+		/>
+		<link
+			rel="apple-touch-icon"
+			sizes="180x180"
+			href="./images/apple-touch-icon.png"
+		/>
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 		<link
@@ -23,15 +41,84 @@
 			<div class="container">
 				<div class="header__inner">
 					<div class="logo">
-						<img src="" alt="" class="logo__img" /><span class="logo__title"
-							>Миросфера</span
+						<svg
+							xmlns="http://www.w3.org/2000/svg"
+							xmlns:xlink="http://www.w3.org/1999/xlink"
+							viewBox="0 0 48 48"
+							class="jss13"
 						>
+							<defs>
+								<linearGradient
+									id="48x48_svg__b"
+									x1="40.29"
+									y1="-1249.87"
+									x2="27.86"
+									y2="-1262.3"
+									gradientTransform="matrix(1 0 0 -1 0 -1227.23)"
+									gradientUnits="userSpaceOnUse"
+								>
+									<stop offset="0.63" stop-color="#f1dd97"></stop>
+									<stop offset="1" stop-color="#cbad59"></stop>
+								</linearGradient>
+								<linearGradient
+									id="48x48_svg__a"
+									x1="15.38"
+									y1="-1263.02"
+									x2="40.02"
+									y2="-1220.34"
+									gradientTransform="matrix(1 0 0 -1 0 -1227.23)"
+									gradientUnits="userSpaceOnUse"
+								>
+									<stop offset="0" stop-color="#f1dd97"></stop>
+									<stop offset="1" stop-color="#cbad59"></stop>
+								</linearGradient>
+								<linearGradient
+									id="48x48_svg__c"
+									x1="41.67"
+									y1="17.85"
+									x2="32.42"
+									y2="17.85"
+									xlink:href="#48x48_svg__a"
+								></linearGradient>
+								<linearGradient
+									id="48x48_svg__d"
+									x1="41.24"
+									y1="28.58"
+									x2="3.55"
+									y2="28.58"
+									xlink:href="#48x48_svg__a"
+								></linearGradient>
+							</defs>
+							<path
+								d="M43.62 32.86c.88-2.22 1.82-7.15-1-7.15H29.35c-1.41 0-4.26.16-3.75-1.94-.75 2.07-2.82 6-1 8 1.17 1.31 3.27 1.07 4.85 1.07Z"
+								style="fill: url(#48x48_svg__b)"
+							></path>
+							<path
+								d="M27.44 32.85h-5.91c-3.41 0-4.56-3.47-3.92-6.38 1-4.52 6.69-14.58 8.71-19a13.58 13.58 0 0 0-4.84-.16c6.31-3 9.07-4.38 15.08-7.28-3.79 8.45-6.5 13.58-10.28 22-.3.65-2.38 6.18-2.3 8.08s1.54 2.49 3.46 2.74Z"
+								style="fill: url(#48x48_svg__a)"
+							></path>
+							<path
+								d="M39.54 23.55h2.13a19.44 19.44 0 0 0-8.39-11.4L32.4 14a17.2 17.2 0 0 1 7.14 9.55Z"
+								style="fill: url(#48x48_svg__c)"
+							></path>
+							<path
+								d="M39 35a17.36 17.36 0 1 1-17-23.82l1-2h-.17A19.42 19.42 0 1 0 41.24 35Z"
+								style="fill: url(#48x48_svg__d)"
+							></path>
+						</svg>
+						<span class="logo__title">Миросфера</span>
 					</div>
 					<nav class="menu">
 						<div class="menu__list">
-							<a href="#" class="menu__item">Главная страница</a>
-							<a href="#" class="menu__item">Регламент</a>
-							<a href="#" class="menu__item">Устав</a>
+							<a href="https://mirosphere.ru/" class="menu__item"
+								>Главная страница</a
+							>
+							<a href="https://mirosphere.ru/docs/order" class="menu__item"
+								>Регламент</a
+							>
+							<a href="https://mirosphere.ru/docs/rules" class="menu__item"
+								>Устав</a
+							>
 							<a href="#" class="menu__item">Партнерам</a>
 						</div>
 					</nav>
@@ -138,8 +225,15 @@
 				<div class="contacts__inner">
 					<div class="contacts__title">Контакты:</div>
 					<div class="contacts__info">
-						<div>Разработка web-приложений</div>
-						<div>любой сложности под ключ</div>
+						<div class="contacts__info-left">
+							Разработка web-приложений любой сложности под ключ
+						</div>
+						<div class="contacts__info-right">
+							Мы всегда ищем <span>новых членов,</span> которые привнесут в нашу
+							команду энергию, креативность и страсть.
+							<span>Как вы думаете,</span> у вас есть то, что нужно? Будем рады
+							видеть <span>ваше резюме</span>!
+						</div>
 					</div>
 					<div class="contacts__box">
 						<a href="#" class="contacts__link"></a
@@ -165,84 +259,23 @@
 					</div>
 					<div class="footer__text">От людей поколениям</div>
 					<div class="footer__link">
-						<a href="#">Telegram</a>
+						<a href="https://t.me/mirosphere_org" target="_blank">
+							<svg>
+								<use href="#telegramSvg" />
+							</svg>
+						</a>
 					</div>
 				</div>
 			</div>
 		</footer>
+
 		<div class="svg-sprite">
 			<svg>
 				<defs>
-					<symbol id="logoSvg" viewBox="0 0 74 74">
+					<symbol id="telegramSvg" viewBox="0 0 24 24">
 						<path
 							fill="currentColor"
-							d="m70.71 39.49a32.38 32.38 0 0 0 -9.08-19.71 3.19 3.19 0 0 0 -4.42 0 3.1 3.1 0 0 0 -.21 4.22 30.65 30.65 0 0 1 3.42 5 22.73 22.73 0 0 1 -3 26.43 24.89 24.89 0 0 1 -4.59 3.86v-10.29c-.03-11.24-10.25-16-10.67-16.16-6.88-3.19-10.26-11.1-10.62-12-1.67-9.6-7.35-12.67-9.41-13.49-.75-2.35-2.68-5.06-7.48-5.35a1 1 0 0 0 -.93.52 1 1 0 0 0 .06 1.07 5.61 5.61 0 0 1 .88 3.12c-1.92.49-6.61 2.19-7.19 7.2 0 .06-.11 1.47-2.34 2.81a3.22 3.22 0 0 0 -1.72 1.84c-.45 1.23-.16 2.73.92 4.51.13.18 3 4.14 7.9 3.52a8 8 0 0 1 -2.47 5.63 1.07 1.07 0 0 0 -.19.28 17.56 17.56 0 0 0 1.57 15.35.87.87 0 0 0 .19.23c.06.05 5.34 4.72 3.8 9.48l-1.82 5.29a1.25 1.25 0 0 1 -.7.76l-2.74 1.16a3.65 3.65 0 0 0 1.43 7h5.18a3.44 3.44 0 0 0 3.2-2.21l3.66-9.74a11.45 11.45 0 0 0 4.77 4.18l-1.67.21a3.85 3.85 0 0 0 -3.33 4.42 3.94 3.94 0 0 0 3.89 3.27h15.32c.72.07 1.41.1 2 .1a16.66 16.66 0 0 0 6.27-1.09 28.29 28.29 0 0 0 11.75-8.66 41.54 41.54 0 0 0 6-9.78 27.59 27.59 0 0 0 2.37-12.98zm-57-23.78h-.78a1.46 1.46 0 0 1 0-2.91h.78a1.46 1.46 0 1 1 0 2.91z"
-						/>
-					</symbol>
-					<symbol id="notifySvg" viewBox="0 0 448 512">
-						<path
-							fill="currentColor"
-							d="M224 512c35.32 0 63.97-28.65 63.97-64H160.03c0 35.35 28.65 64 63.97 64zm215.39-149.71c-19.32-20.76-55.47-51.99-55.47-154.29 0-77.7-54.48-139.9-127.94-155.16V32c0-17.67-14.32-32-31.98-32s-31.98 14.33-31.98 32v20.84C118.56 68.1 64.08 130.3 64.08 208c0 102.3-36.15 133.53-55.47 154.29-6 6.45-8.66 14.16-8.61 21.71.11 16.4 12.98 32 32.1 32h383.8c19.12 0 32-15.6 32.1-32 .05-7.55-2.61-15.27-8.61-21.71z"
-						/>
-					</symbol>
-					<symbol id="pawSvg" viewBox="0 0 448 512">
-						<path
-							fill="currentColor"
-							d="M144 128c26.51 0 48-21.49 48-48s-21.49-48-48-48-48 21.49-48 48 21.49 48 48 48zm-48 64c0-26.51-21.49-48-48-48S0 165.49 0 192s21.49 48 48 48 48-21.49 48-48zm208-64c26.51 0 48-21.49 48-48s-21.49-48-48-48-48 21.49-48 48 21.49 48 48 48zm96 16c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48-21.49-48-48-48zm-32.69 156.78c-26.29-14.84-47.14-61.41-67.17-97.83C284.41 174.31 254.21 160 224 160s-60.41 14.31-76.15 42.95c-20.29 36.96-40.12 82.56-67.17 97.83C51.63 317.18 32 348.18 32 383.95c0 53.01 42.98 95.98 96 95.98 51.71 1.76 72.19-31.99 96-31.99s44.29 33.75 96 31.99c53.02 0 96-42.97 96-95.98 0-35.77-19.63-66.77-48.69-83.17z"
-						/>
-					</symbol>
-					<symbol id="micSvg" viewBox="0 0 352 512">
-						<path
-							fill="currentColor"
-							d="M176 352c53.02 0 96-42.98 96-96V96c0-53.02-42.98-96-96-96S80 42.98 80 96v160c0 53.02 42.98 96 96 96zm160-160h-16c-8.84 0-16 7.16-16 16v48c0 74.8-64.49 134.82-140.79 127.38C96.71 376.89 48 317.11 48 250.3V208c0-8.84-7.16-16-16-16H16c-8.84 0-16 7.16-16 16v40.16c0 89.64 63.97 169.55 152 181.69V464H96c-8.84 0-16 7.16-16 16v16c0 8.84 7.16 16 16 16h160c8.84 0 16-7.16 16-16v-16c0-8.84-7.16-16-16-16h-56v-33.77C285.71 418.47 352 344.9 352 256v-48c0-8.84-7.16-16-16-16z"
-						/>
-					</symbol>
-					<symbol id="searchSvg" viewBox="0 0 512 512">
-						<path
-							fill="currentColor"
-							d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
-						/>
-					</symbol>
-					<symbol id="facebookSvg" viewBox="0 0 512 512">
-						<path
-							fill="currentColor"
-							d="M504 256C504 119 393 8 256 8S8 119 8 256c0 123.78 90.69 226.38 209.25 245V327.69h-63V256h63v-54.64c0-62.15 37-96.48 93.67-96.48 27.14 0 55.52 4.84 55.52 4.84v61h-31.28c-30.8 0-40.41 19.12-40.41 38.73V256h68.78l-11 71.69h-57.78V501C413.31 482.38 504 379.78 504 256z"
-						/>
-					</symbol>
-					<symbol id="telegramSvg" viewBox="0 0 496 512">
-						<path
-							fill="currentColor"
-							d="M248 8C111 8 0 119 0 256s111 248 248 248 248-111 248-248S385 8 248 8zm121.8 169.9l-40.7 191.8c-3 13.6-11.1 16.9-22.4 10.5l-62-45.7-29.9 28.8c-3.3 3.3-6.1 6.1-12.5 6.1l4.4-63.1 114.9-103.8c5-4.4-1.1-6.9-7.7-2.5l-142 89.4-61.2-19.1c-13.3-4.2-13.6-13.3 2.8-19.7l239.1-92.2c11.1-4 20.8 2.7 17.2 19.5z"
-						/>
-					</symbol>
-					<symbol id="instagramSvg" viewBox="0 0 448 512">
-						<path
-							fill="currentColor"
-							d="M224.1 141c-63.6 0-114.9 51.3-114.9 114.9s51.3 114.9 114.9 114.9S339 319.5 339 255.9 287.7 141 224.1 141zm0 189.6c-41.1 0-74.7-33.5-74.7-74.7s33.5-74.7 74.7-74.7 74.7 33.5 74.7 74.7-33.6 74.7-74.7 74.7zm146.4-194.3c0 14.9-12 26.8-26.8 26.8-14.9 0-26.8-12-26.8-26.8s12-26.8 26.8-26.8 26.8 12 26.8 26.8zm76.1 27.2c-1.7-35.9-9.9-67.7-36.2-93.9-26.2-26.2-58-34.4-93.9-36.2-37-2.1-147.9-2.1-184.9 0-35.8 1.7-67.6 9.9-93.9 36.1s-34.4 58-36.2 93.9c-2.1 37-2.1 147.9 0 184.9 1.7 35.9 9.9 67.7 36.2 93.9s58 34.4 93.9 36.2c37 2.1 147.9 2.1 184.9 0 35.9-1.7 67.7-9.9 93.9-36.2 26.2-26.2 34.4-58 36.2-93.9 2.1-37 2.1-147.8 0-184.8zM398.8 388c-7.8 19.6-22.9 34.7-42.6 42.6-29.5 11.7-99.5 9-132.1 9s-102.7 2.6-132.1-9c-19.6-7.8-34.7-22.9-42.6-42.6-11.7-29.5-9-99.5-9-132.1s-2.6-102.7 9-132.1c7.8-19.6 22.9-34.7 42.6-42.6 29.5-11.7 99.5-9 132.1-9s102.7-2.6 132.1 9c19.6 7.8 34.7 22.9 42.6 42.6 11.7 29.5 9 99.5 9 132.1s2.7 102.7-9 132.1z"
-						/>
-					</symbol>
-					<symbol id="threePointsSvg" viewBox="0 0 24 24">
-						<path
-							fill="currentColor"
-							d="M12 8c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
-						/>
-					</symbol>
-					<symbol id="logOutSvg" viewBox="0 0 512 512">
-						<path
-							fill="currentColor"
-							d="M497 273L329 441c-15 15-41 4.5-41-17v-96H152c-13.3 0-24-10.7-24-24v-96c0-13.3 10.7-24 24-24h136V88c0-21.4 25.9-32 41-17l168 168c9.3 9.4 9.3 24.6 0 34zM192 436v-40c0-6.6-5.4-12-12-12H96c-17.7 0-32-14.3-32-32V160c0-17.7 14.3-32 32-32h84c6.6 0 12-5.4 12-12V76c0-6.6-5.4-12-12-12H96c-53 0-96 43-96 96v192c0 53 43 96 96 96h84c6.6 0 12-5.4 12-12z"
-						/>
-					</symbol>
-					<symbol id="settingsSvg" viewBox="0 0 512 512">
-						<path
-							fill="currentColor"
-							d="M487.4 315.7l-42.6-24.6c4.3-23.2 4.3-47 0-70.2l42.6-24.6c4.9-2.8 7.1-8.6 5.5-14-11.1-35.6-30-67.8-54.7-94.6-3.8-4.1-10-5.1-14.8-2.3L380.8 110c-17.9-15.4-38.5-27.3-60.8-35.1V25.8c0-5.6-3.9-10.5-9.4-11.7-36.7-8.2-74.3-7.8-109.2 0-5.5 1.2-9.4 6.1-9.4 11.7V75c-22.2 7.9-42.8 19.8-60.8 35.1L88.7 85.5c-4.9-2.8-11-1.9-14.8 2.3-24.7 26.7-43.6 58.9-54.7 94.6-1.7 5.4.6 11.2 5.5 14L67.3 221c-4.3 23.2-4.3 47 0 70.2l-42.6 24.6c-4.9 2.8-7.1 8.6-5.5 14 11.1 35.6 30 67.8 54.7 94.6 3.8 4.1 10 5.1 14.8 2.3l42.6-24.6c17.9 15.4 38.5 27.3 60.8 35.1v49.2c0 5.6 3.9 10.5 9.4 11.7 36.7 8.2 74.3 7.8 109.2 0 5.5-1.2 9.4-6.1 9.4-11.7v-49.2c22.2-7.9 42.8-19.8 60.8-35.1l42.6 24.6c4.9 2.8 11 1.9 14.8-2.3 24.7-26.7 43.6-58.9 54.7-94.6 1.5-5.5-.7-11.3-5.6-14.1zM256 336c-44.1 0-80-35.9-80-80s35.9-80 80-80 80 35.9 80 80-35.9 80-80 80z"
-						/>
-					</symbol>
-					<symbol id="youtubeSvg" viewBox="0 0 576 512">
-						<path
-							fill="currentColor"
-							d="M549.655 124.083c-6.281-23.65-24.787-42.276-48.284-48.597C458.781 64 288 64 288 64S117.22 64 74.629 75.486c-23.497 6.322-42.003 24.947-48.284 48.597-11.412 42.867-11.412 132.305-11.412 132.305s0 89.438 11.412 132.305c6.281 23.65 24.787 41.5 48.284 47.821C117.22 448 288 448 288 448s170.78 0 213.371-11.486c23.497-6.321 42.003-24.171 48.284-47.821 11.412-42.867 11.412-132.305 11.412-132.305s0-89.438-11.412-132.305zm-317.51 213.508V175.185l142.739 81.205-142.739 81.201z"
+							d="M6.81,13.39,9.3,19.61l3.24-3.23,5.55,4.41L22,3.21,2,11.54Zm9.48-5.14-6.13,5.59L9.4,16.71,8,13.19Z"
 						/>
 					</symbol>
 				</defs>
@@ -251,7 +284,6 @@
 
 		<!-- Load library from the CDN -->
 		<script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script>
-
 		<!-- Setup and start animation! -->
 		<script>
 			var typed = new Typed('#typing-area', {
