Add fantastic space stars

--- a/index.html
+++ b/index.html
@@ -283,6 +283,24 @@
 			</div>
 		</footer>
 
+		<!-- Space Block -->
+		<div class="firefly"></div>
+		<div class="firefly"></div>
+		<div class="firefly"></div>
+		<div class="firefly"></div>
+		<div class="firefly"></div>
+		<div class="firefly"></div>
+		<div class="firefly"></div>
+		<div class="firefly"></div>
+		<div class="firefly"></div>
+		<div class="firefly"></div>
+		<div class="firefly"></div>
+		<div class="firefly"></div>
+		<div class="firefly"></div>
+		<div class="firefly"></div>
+		<div class="firefly"></div>
+		<!-- Space Block -->
+
 		<div class="svg-sprite">
 			<svg>
 				<defs>
