--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 		<header class="header">
 			<div class="container">
 				<div class="header__inner">
-					<div class="logo">
+					<a href="https://mirosphere.ru/" class="logo">
 						<svg
 							xmlns="http://www.w3.org/2000/svg"
 							xmlns:xlink="http://www.w3.org/1999/xlink"
@@ -107,7 +107,7 @@
 							></path>
 						</svg>
 						<span class="logo__title">Миросфера</span>
-					</div>
+					</a>
 					<nav class="menu">
 						<div class="menu__list">
 							<a href="https://mirosphere.ru/" class="menu__item"
@@ -133,14 +133,14 @@
 						<div class="typing-area">
 							<span id="typing-area"></span>
 							<div class="typed-text" id="typed-text">
-								<p>
+								<!-- <p>
 									Присоединяйся, потому что только вместе можно добиться
 									большего!
 								</p>
 								<p>
 									Подключайся, потому что мы объединяем людей нацеленных на
 									изменение мира
-								</p>
+								</p> -->
 								<p>
 									Присоединяйся, потому что мы уважаем каждого члена команды,
 									как самих себя
@@ -226,7 +226,7 @@
 					<div class="contacts__title">Контакты:</div>
 					<div class="contacts__info">
 						<div class="contacts__info-left">
-							Разработка web-приложений любой сложности под ключ
+							Разработка web&#8209;приложений любой сложности под ключ
 						</div>
 						<div class="contacts__info-right">
 							<div class="contacts__info-offer">
