Adjust typing text speed

--- a/index.html
+++ b/index.html
@@ -133,14 +133,14 @@
 						<div class="typing-area">
 							<span id="typing-area"></span>
 							<div class="typed-text" id="typed-text">
-								<!-- <p>
+								<p>
 									Присоединяйся, потому что только вместе можно добиться
 									большего!
 								</p>
 								<p>
 									Подключайся, потому что мы объединяем людей нацеленных на
 									изменение мира
-								</p> -->
+								</p>
 								<p>
 									Присоединяйся, потому что мы уважаем каждого члена команды,
 									как самих себя
@@ -320,7 +320,8 @@
 		<script>
 			var typed = new Typed('#typing-area', {
 				stringsElement: '#typed-text',
-				typeSpeed: 50,
+				typeSpeed: 90,
+				backSpeed: 25,
 				loop: true,
 				startDelay: 1000,
 			});
