--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Миросфера - партнеры</title>
-		<link rel="icon" href="/favicon.ico" />
+		<link rel="icon" href="./images/favicon.ico" />
 		<link
 			rel="icon"
 			type="image/png"
@@ -125,11 +125,11 @@
 				</div>
 			</div>
 		</header>
-		<main class="main">
+		<section class="motto">
 			<div class="container">
-				<div class="main__inner">
-					<div class="main__title">Партнерам:</div>
-					<div class="card card--main">
+				<div class="motto__inner">
+					<div class="motto__title">Партнерам:</div>
+					<div class="card">
 						<div class="typing-area">
 							<span id="typing-area"></span>
 							<div class="typed-text" id="typed-text">
@@ -150,7 +150,7 @@
 					</div>
 				</div>
 			</div>
-		</main>
+		</section>
 		<section class="roles">
 			<div class="container">
 				<div class="roles__inner">
