Add contacts section to main page

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 		<header class="header">
 			<div class="container">
 				<div class="header__inner">
-					<a href="https://mirosphere.ru/" class="logo">
+					<a href="index.html" class="logo">
 						<svg
 							xmlns="http://www.w3.org/2000/svg"
 							xmlns:xlink="http://www.w3.org/1999/xlink"
@@ -110,21 +110,72 @@
 					</a>
 					<nav class="menu">
 						<div class="menu__list">
-							<a href="https://mirosphere.ru/" class="menu__item"
-								>Главная страница</a
-							>
+							<a href="index.html" class="menu__item">Главная страница</a>
 							<a href="https://mirosphere.ru/docs/order" class="menu__item"
 								>Регламент</a
 							>
 							<a href="https://mirosphere.ru/docs/rules" class="menu__item"
 								>Устав</a
 							>
-							<a href="#" class="menu__item">Партнерам</a>
+							<a href="partners-page.html" class="menu__item">Партнерам</a>
 						</div>
 					</nav>
 				</div>
 			</div>
 		</header>
+
+		<section class="contacts">
+			<div class="container">
+				<div class="contacts__inner">
+					<div class="contacts__title">Контакты</div>
+					<div class="contacts__info">
+						Разработка web&#8209;приложений любой сложности под ключ
+					</div>
+					<div class="contacts__main">
+						<div class="contacts__links">
+							<div class="card">
+								<div class="contacts__links-inner">
+									<a href="tel:+79604777288" class="link"
+										><svg>
+											<use href="#phoneSvg" />
+										</svg>
+										<span class="link__title">+7(960)-4-777-2-88</span></a
+									><a
+										href="https://t.me/pavel_i_tel"
+										class="link"
+										target="_blank"
+										><svg>
+											<use href="#telegramSvg" />
+										</svg>
+										<span class="link__title">Telegram</span></a
+									><a href="mailto:admin@mirosphere.org" class="link"
+										><svg>
+											<use href="#mailSvg" />
+										</svg>
+										<span class="link__title">admin@mirosphere.org</span></a
+									>
+								</div>
+							</div>
+						</div>
+						<form class="contacts__form">
+							<div class="card">
+								<div class="contacts__form-inner">
+									<div class="contacts__form-text">
+										Хочу получать обновления о проекте
+									</div>
+									<input
+										type="text"
+										placeholder="ваша электронная почта"
+										required=""
+									/>
+									<button type="submit">Подписаться</button>
+								</div>
+							</div>
+						</form>
+					</div>
+				</div>
+			</div>
+		</section>
 
 		<footer class="footer">
 			<div class="container">
@@ -173,6 +224,18 @@
 						<path
 							fill="currentColor"
 							d="M6.81,13.39,9.3,19.61l3.24-3.23,5.55,4.41L22,3.21,2,11.54Zm9.48-5.14-6.13,5.59L9.4,16.71,8,13.19Z"
+						/>
+					</symbol>
+					<symbol id="phoneSvg" viewBox="0 0 24 24">
+						<path
+							fill="currentColor"
+							d="M6.62 10.79c1.44 2.83 3.76 5.14 6.59 6.59l2.2-2.2c.27-.27.67-.36 1.02-.24 1.12.37 2.33.57 3.57.57.55 0 1 .45 1 1V20c0 .55-.45 1-1 1-9.39 0-17-7.61-17-17 0-.55.45-1 1-1h3.5c.55 0 1 .45 1 1 0 1.25.2 2.45.57 3.57.11.35.03.74-.25 1.02l-2.2 2.2z"
+						/>
+					</symbol>
+					<symbol id="mailSvg" viewBox="0 0 24 24">
+						<path
+							fill="currentColor"
+							d="M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 4l-8 5-8-5V6l8 5 8-5v2z"
 						/>
 					</symbol>
 				</defs>
