--- a/partners-page.html
+++ b/partners-page.html
@@ -40,7 +40,7 @@
 		<header class="header">
 			<div class="container">
 				<div class="header__inner">
-					<a href="https://mirosphere.ru/" class="logo">
+					<a href="index.html" class="logo">
 						<svg
 							xmlns="http://www.w3.org/2000/svg"
 							xmlns:xlink="http://www.w3.org/1999/xlink"
@@ -110,9 +110,7 @@
 					</a>
 					<nav class="menu">
 						<div class="menu__list">
-							<a href="https://mirosphere.ru/" class="menu__item"
-								>Главная страница</a
-							>
+							<a href="index.html" class="menu__item">Главная страница</a>
 							<a href="https://mirosphere.ru/docs/order" class="menu__item"
 								>Регламент</a
 							>
@@ -220,22 +218,22 @@
 				</div>
 			</div>
 		</section>
-		<section class="contacts">
+		<section class="partners-contacts">
 			<div class="container">
-				<div class="contacts__inner">
-					<div class="contacts__title">Контакты:</div>
-					<div class="contacts__info">
-						<div class="contacts__info-left">
+				<div class="partners-contacts__inner">
+					<div class="partners-contacts__title">Контакты:</div>
+					<div class="partners-contacts__info">
+						<div class="partners-contacts__info-left">
 							Разработка web&#8209;приложений любой сложности под ключ
 						</div>
-						<div class="contacts__info-right">
-							<div class="contacts__info-offer">
+						<div class="partners-contacts__info-right">
+							<div class="partners-contacts__info-offer">
 								Мы всегда ищем <span>новых членов,</span> которые привнесут в
 								нашу команду энергию, креативность и страсть.
 								<span>Как вы думаете,</span> у вас есть то, что нужно? Будем
 								рады видеть <span>ваше резюме</span>!
 							</div>
-							<form class="contacts__form">
+							<form class="partners-contacts__form">
 								<input
 									type="text"
 									placeholder="ваша электронная почта"
@@ -251,7 +249,7 @@
 									name="job-experience"
 									value=""
 								></textarea>
-								<a href="#" class="contacts__form-file-upload"
+								<a href="#" class="partners-contacts__form-file-upload"
 									>прикрепите ваше резюме</a
 								>
 								<button type="submit">Отправить</button>
