Add products section

--- a/index.html
+++ b/index.html
@@ -1881,7 +1881,7 @@
 										</g>
 										<g transform="translate(205.8,403)">
 											<text class="clock__value">
-												<tspan text-anchor="middle">73%</tspan>
+												<tspan text-anchor="middle">100%</tspan>
 											</text>
 										</g>
 									</g>
@@ -2127,6 +2127,61 @@
 									Нет ничего лучше, чем посмотреть на проделанное за последний
 									год. Объёмы ошеломляют. Результат труда вдохновляет
 								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
+		<section class="products">
+			<div class="container">
+				<div class="products__inner">
+					<div class="products__title">Наши проекты</div>
+					<div class="chess">
+						<div class="chess__subtitle">
+							<div class="card">
+								<a href="http://chess-you.org/" target="_blank">
+									chess-you.org
+								</a>
+							</div>
+						</div>
+						<img
+							src="./images/chess1.jpg"
+							alt="Турнирная таблица"
+							class="chess__img1"
+						/>
+						<img
+							src="./images/chess4.jpg"
+							alt="Главный экран"
+							class="chess__img4"
+						/>
+						<div class="chess__info1">
+							<div class="card">
+								И если он меня прикончит матом, то я его через бедро с захватом
+								или ход конём по голове!
+								<span>В.В. Высоцкий</span>
+							</div>
+						</div>
+						<img src="./images/chess5.jpg" alt="Видео" class="chess__img5" />
+						<div class="chess__info2">
+							<div class="card">
+								Спасение утопающих дело рук самих утопающих!
+							</div>
+						</div>
+						<img
+							src="./images/chess3.jpg"
+							alt="Жеребъёвка"
+							class="chess__img3"
+						/>
+						<div class="chess__info3">
+							<div class="card">
+								— Шахматы! — говорил Остап. — Знаете ли вы, что такое шахматы?
+								Они двигают вперед не только культуру, но и экономику! Знаете ли
+								вы, что шахматный клуб четырех коней при правильной постановке
+								дела сможет совершенно преобразить город Васюки?
+								<br />
+								Остап со вчерашнего дня еще ничего не ел. Поэтому красноречие
+								его было необыкновенно.
 							</div>
 						</div>
 					</div>
@@ -2393,17 +2448,3 @@
 		</div>
 	</body>
 </html>
-<svg
-	class="MuiSvgIcon-root MuiSvgIcon-fontSizeLarge"
-	focusable="false"
-	viewBox="0 0 24 24"
-	aria-hidden="true"
->
-	<title>statistics</title>
-	<path
-		d="M5.67,11.44A1.57,1.57,0,0,0,6.77,11l1.56.78a1.23,1.23,0,0,0,0,.19,1.58,1.58,0,1,0,3.16,0,1.5,1.5,0,0,0-.16-.67l2.12-2.12a1.51,1.51,0,0,0,.68.16,1.58,1.58,0,0,0,1.58-1.58,1.45,1.45,0,0,0-.08-.47L17.45,5.9a1.54,1.54,0,0,0,.87.27,1.59,1.59,0,1,0-1.57-1.59,1.78,1.78,0,0,0,.07.47L15,6.43a1.52,1.52,0,0,0-.87-.27,1.58,1.58,0,0,0-1.58,1.58,1.55,1.55,0,0,0,.16.68l-2.12,2.12a1.58,1.58,0,0,0-.68-.16,1.54,1.54,0,0,0-1.09.45l-1.56-.78c0-.07,0-.13,0-.2a1.59,1.59,0,1,0-1.59,1.59Z"
-	></path>
-	<path
-		d="M20.47,20h-.56V8.8a.53.53,0,0,0-.53-.53H17.27a.52.52,0,0,0-.52.53V20H15.69V12a.52.52,0,0,0-.53-.52H13.05a.52.52,0,0,0-.52.52v8H11.47V16.18a.52.52,0,0,0-.52-.52H8.84a.52.52,0,0,0-.53.52V20H7.25V14.07a.52.52,0,0,0-.52-.52H4.62a.52.52,0,0,0-.53.52V20H3.53a.52.52,0,0,0-.53.52.53.53,0,0,0,.53.53H20.47a.53.53,0,0,0,.53-.53A.52.52,0,0,0,20.47,20Z"
-	></path>
-</svg>
