Add command seciton

--- a/index.html
+++ b/index.html
@@ -2188,54 +2188,42 @@
 				</div>
 			</div>
 		</section>
-		<section class="contacts">
+		<section class="command">
 			<div class="container">
-				<div class="contacts__inner">
-					<div class="contacts__title">Контакты</div>
-					<div class="contacts__info">
-						Разработка web&#8209;приложений любой сложности под ключ
-					</div>
-					<div class="contacts__main">
-						<div class="contacts__links">
+				<div class="command__inner">
+					<div class="command__title">Команда Миросфера:</div>
+					<div class="command__slider">
+						<div class="dev">
 							<div class="card">
-								<div class="contacts__links-inner">
-									<a href="tel:+79604777288" class="link"
-										><svg>
-											<use href="#phoneSvg" />
-										</svg>
-										<span class="link__title">+7(960)-4-777-2-88</span></a
-									><a
-										href="https://t.me/pavel_i_tel"
-										class="link"
-										target="_blank"
-										><svg>
-											<use href="#telegramSvg" />
-										</svg>
-										<span class="link__title">Telegram</span></a
-									><a href="mailto:admin@mirosphere.org" class="link"
-										><svg>
-											<use href="#mailSvg" />
-										</svg>
-										<span class="link__title">admin@mirosphere.org</span></a
-									>
+								<div class="dev__inner">
+									<div class="dev__profile">
+										<img src="./images/prorab.webp" class="dev__img" />
+										<div class="dev__name">Владимир Николаевич, Прораб</div>
+									</div>
+									<div class="dev__info">
+										<div class="dev__text">
+											— А ты что видишь, а?
+											<br />
+											— Песок.
+											<br />
+											— <em>(с досадой)</em> Значит, сработала эта хреновина.
+											<br />
+											А этот козёл-то… с дырочками — там, что ль, остался?
+										</div>
+										<a
+											href="https://ru.wikipedia.org/wiki/%D0%9A%D0%B8%D0%BD-%D0%B4%D0%B7%D0%B0-%D0%B4%D0%B7%D0%B0!"
+											>©&nbsp;Кин-дза-дза</a
+										>
+									</div>
+									<div class="dev__controls">
+										<div class="dev__left-btn">&#60;</div>
+										<div class="dev__right-btn">&#62;</div>
+										<div class="dev__controls-divider"></div>
+										<sub class="dev__controls-info">01&nbsp;/&nbsp;03</sub>
+									</div>
 								</div>
 							</div>
 						</div>
-						<form class="contacts__form">
-							<div class="card">
-								<div class="contacts__form-inner">
-									<div class="contacts__form-text">
-										Хочу получать обновления о проекте
-									</div>
-									<input
-										type="text"
-										placeholder="ваша электронная почта"
-										required=""
-									/>
-									<button type="submit">Подписаться</button>
-								</div>
-							</div>
-						</form>
 					</div>
 				</div>
 			</div>
